# politician-convictions-knowledge-graph

./: .gitignore  README.md  pyproject.toml
data/: all_relations.txt  answer SmolLM3.txt  answer0.txt  conviction_probabilities.json  filtered_relations.txt  french_politicians.csv  french_politicians_qid.csv  french_politicians_with_wikipedia.csv  politician_relations_test.jsonl  prompt_answers.txt  prompt_answers_cleaned.txt  sample.json  sample_50.0_70.0.json  useful_relations.txt
prompts/: prompt_0.txt  prompt_1.txt  prompt_10.txt  prompt_11.txt  prompt_12.txt  prompt_13.txt  prompt_14.txt  prompt_15.txt  prompt_16.txt  prompt_17.txt  prompt_18.txt  prompt_19.txt  prompt_2.txt  prompt_20.txt  prompt_21.txt  prompt_22.txt  prompt_23.txt  prompt_24.txt  prompt_25.txt  prompt_26.txt  prompt_27.txt  prompt_28.txt  prompt_29.txt  prompt_3.txt  prompt_30.txt  prompt_31.txt  prompt_32.txt  prompt_33.txt  prompt_34.txt  prompt_35.txt  prompt_36.txt  prompt_37.txt  prompt_38.txt  prompt_39.txt  prompt_4.txt  prompt_40.txt  prompt_41.txt  prompt_42.txt  prompt_43.txt  prompt_44.txt  (+8 more)
source/: classification.py  extraction_analysis.py  fetch-wikipedia-links.py  fetch_relations.py  graph_creation.py  graph_data_formatting.py  info_extraction_wikipedia.py  make_ground_truth.py  relations_filter.py  scrape_wikipedia.py  split_paragraphs.py  train_GNN.py  train_test_split.py  utils.py
